--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "version": "0.50.0",
+  "version": "0.50.1",
   "private": true,
   "packageManager": "pnpm@9.15.0",
   "engines": {
@@ -42,6 +42,7 @@
     "@types/fs-extra": "catalog:",
     "@types/js-yaml": "catalog:",
     "@types/katex": "catalog:",
+    "@types/lodash": "^4.17.14",
     "@types/markdown-it": "catalog:",
     "@types/node": "catalog:",
     "@types/prompts": "catalog:",
@@ -50,12 +51,16 @@
     "@types/semver": "catalog:",
     "@types/yargs": "catalog:",
     "@vueuse/core": "catalog:",
+    "@vueuse/integrations": "catalog:",
+    "axios": "^1.7.9",
+    "axios-retry": "^4.5.0",
     "bumpp": "catalog:",
     "cross-env": "catalog:",
     "cypress": "catalog:",
     "eslint": "catalog:",
     "eslint-plugin-format": "catalog:",
     "esno": "catalog:",
+    "idb-keyval": "^6.2.1",
     "katex": "catalog:",
     "lint-staged": "catalog:",
     "mermaid": "catalog:",
