--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@slidev/client",
   "type": "module",
-  "version": "0.50.0",
+  "version": "0.50.1",
   "description": "Presentation slides for developers",
   "author": "antfu <anthonyfu117@hotmail.com>",
   "license": "MIT",
@@ -41,6 +41,7 @@
     "@unhead/vue": "catalog:",
     "@unocss/reset": "catalog:",
     "@vueuse/core": "catalog:",
+    "@vueuse/integrations": "catalog:",
     "@vueuse/math": "catalog:",
     "@vueuse/motion": "catalog:",
     "drauu": "catalog:",
