--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -48,6 +48,7 @@ catalog:
   '@volar/vscode': ^2.4.11
   '@vue/compiler-sfc': ^3.5.13
   '@vueuse/core': ^12.0.0
+  '@vueuse/integrations': ^12.0.0
   '@vueuse/math': ^12.0.0
   '@vueuse/motion': ^2.2.6
   bumpp: ^9.9.1
