--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "version": "0.50.1",
+  "version": "0.50.2",
   "private": true,
   "packageManager": "pnpm@9.15.0",
   "engines": {
@@ -26,6 +26,9 @@
     "release": "bumpp package.json packages/*/package.json docs/package.json --all -x \"zx scripts/update-versions.mjs\"",
     "test": "vitest test",
     "prepare": "simple-git-hooks"
+  },
+  "dependencies": {
+    "build": "^0.1.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "catalog:",
