--- a/packages/create-app/package.json
+++ b/packages/create-app/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "create-slidev",
+  "name": "@zsnmwy/create-slidev",
   "type": "module",
-  "version": "0.50.1",
+  "version": "0.50.2",
   "description": "Create starter template for Slidev",
   "author": "antfu <anthonyfu117@hotmail.com>",
   "license": "MIT",
