--- a/packages/create-theme/package.json
+++ b/packages/create-theme/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "create-slidev-theme",
+  "name": "@zsnmwy/slidev-theme",
   "type": "module",
-  "version": "0.50.1",
+  "version": "0.50.2",
   "description": "Create starter theme template for Slidev",
   "author": "antfu <anthonyfu117@hotmail.com>",
   "license": "MIT",
