--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@slidev/parser",
-  "version": "0.50.1",
+  "name": "@zsnmwy/parser",
+  "version": "0.50.2",
   "description": "Markdown parser for Slidev",
   "author": "antfu <anthonyfu117@hotmail.com>",
   "license": "MIT",
